# summarizer

./: .gitignore  README.md  pyproject.toml
src/summarizer/: __init__.py  app.py  crawler.py  matrix.py  run.py
